# onshape-assembly-sync

./: .gitignore  Cargo.toml  sample.env
src/: main.rs
