[package]
name = "onshape-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
dotenv = "0.15"
hmac = "0.12"
http = "0.2"
httpdate = "1.0"
mime = "0.3"
percent-encoding = "*"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
